# ml-flow-eval

./: .gitignore  README.md  eval_dataset.csv  main.py  pyproject.toml
bias-detection/: requirements.txt
bias-detection-wb/: main.py  pyproject.toml  requirements.txt
bias-detection/data/: eval_dataset.json
bias-detection/utils/: s3_manager.py
bias_detection_wb/: main.py  model_config.json  prompts.json  pyproject.toml  requirements.txt  test.py
bias_detection_wb/Metrics/: agent_metrics.py
bias_detection_wb/Model/: models.py
language-translation/: README.md  main.py  pyproject.toml
prompt-iteration/: main.py  pyproject.toml
syntehtic_data_generator/: main.py  pyproject.toml
synthetic_data_generator/: main.py  pyproject.toml  requirements.txt  synthetic_data.csv
utils/: aws_bedrock.py  config.py  openai.py  s3_manager.py
