[tool.poetry]
name = "bias-detection-wb"
version = "0.1.0"
description = "This is the directory for evaluating bias detection llms using the weights and biases platform"
authors = ["Sean McCrossan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.1.16"
langchain-community = "0.0.33"
langchain-openai = "0.0.8"
openai = "1.12.0"
tiktoken = "0.6.0"
mlflow = "2.12.1"
langsmith = "^0.1.120"
langchain-core = "0.1.43"
python-dotenv = "^1.0.1"
setuptools = "^74.1.2"
faiss-cpu = "^1.8.0.post1"
starlette = "^0.38.5"
fastapi = "^0.114.1"
watchfiles = "^0.24.0"
slowapi = "^0.1.9"
gunicorn = "<22.0.0"
waitress = "^3.0.0"
load-dotenv = "^0.1.0"
boto3 = "^1.35.18"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
nltk = "^3.9.1"
rouge = "^1.0.1"
weave = "^0.51.6"
wandb = "^0.18.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
