[tool.poetry]
name = "language-translation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.1"
python-dotenv = "^1.0.1"
boto3 = "^1.35.15"
langchain = "^0.2.16"
langchain-community = "^0.2.16"
openai = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
