[tool.poetry]
name = "synthetic-data-generator"
version = "0.1.0"
description = "Generate synthetic data given examples"
authors = ["Sean McCrossan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.3"
langchain-experimental = "^0.3.2"
langsmith = "^0.1.129"
openai = "^1.51.0"
python-dotenv = "^1.0.1"
setuptools = "^75.1.0"
faiss-cpu = "^1.8.0.post1"
starlette = ">=0.37.2,<0.39.0"
fastapi = "^0.115.0"
watchfiles = "^0.24.0"
slowapi = "^0.1.9"
gunicorn = "<22.0.0"
waitress = "^3.0.0"
boto3 = "^1.35.30"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
nltk = "^3.9.1"
rouge = "^1.0.1"
weave = "^0.51.12"
wandb = "^0.18.2"
pandas = "^2.2.3"
pydan = "^7.3"
langchain-openai = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
